Font Transfer+Fixed Landscape on Mobile devices

--- a/css/event.css
+++ b/css/event.css
@@ -14,7 +14,6 @@
 
 .container_event {
     width: 100%;
-    height: 78vh;
     background-color: black;
     position: fixed;
 }
